--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "css-loader": "^5.2.7",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "react-scale-text": "^1.2.2"
   }
 }
